Add report for PR #

--- a/reports/pr-/index.html
+++ b/reports/pr-/index.html
@@ -99,7 +99,7 @@
                     <tr>
                         <td>sample.bpmn</td>
                         <td>ProcessOrderTask</td>
-                        <td>Process Order Test</td>
+                        <td>Process Order</td>
                         <td><span class="issue">orderId</span></td>
                         <td>
                             
